elasticsearch/client.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: es-client
  labels:
    component: es
    role: client
spec:
  replicas: 3
  template:
    metadata:
      labels:
        component: es
        role: client
#      annotations:
#        pod.beta.kubernetes.io/init-containers: '[
#          {
#          "name": "sysctl",
#            "image": "busybox",
#            "imagePullPolicy": "IfNotPresent",
#            "command": ["sysctl", "-w", "vm.max_map_count=262144"],
#            "securityContext": {
#              "privileged": true
#            }
#          }
#        ]'
    spec:
      containers:
      - name: es-client
        securityContext:
          privileged: true
          capabilities:
            add:
              - IPC_LOCK
              - SYS_RESOURCE
        image: docker.elastic.co/es/es:6.2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 9200
          name: http
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - name: data-volume
          mountPath: /var/lib/es
        - name: log-volume
          mountPath: /var/log/es
        - name: es-config-volume
          mountPath: /usr/share/es/config/es.yml
          subPath: es.yml
        - name: es-config-volume
          mountPath: /usr/share/es/config/log4j2.properties
          subPath: log4j2.properties
        resources:
          requests:
            cpu: 3000m
            memory: 8Gi
          limits:
            cpu: 3000m
            memory: 8Gi
        readinessProbe:
          httpGet:
            path: /
            port: 9200
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 9200
          initialDelaySeconds: 60
          periodSeconds: 60
          timeoutSeconds: 5
      volumes:
      - name: data-volume
        emptyDir: {}
      - name: log-volume
        emptyDir: {}
      - name: es-config-volume
        configMap:
          name: es-config
