elasticsearch/kibana.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kibana
  namespace: default
  labels:
    component: es
    role: kibana
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        component: es
        role: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:6.2.0
        ports:
        - containerPort: 5601
          name: http
          protocol: TCP
        volumeMounts:
        - name: es-config-volume
          mountPath: /usr/share/kibana/config/kibana.yml
          subPath: kibana.yml
        - name: es-config-volume
          mountPath: /usr/share/kibana/config/role_mapping.yml
          subPath: role_mapping.yml
        - name: es-config-volume
          mountPath: /usr/share/kibana/config/log4j2.properties
          subPath: log4j2.properties
        resources:
          requests:
            cpu: 4
            memory: 8Gi
          limits:
            cpu: 4
            memory: 8Gi
      volumes:
      - name: es-config-volume
        configMap:
          name: es-config
