elasticsearch/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: default
  labels:
    component: es
    role: kibana
spec:
  type: NodePort
  clusterIP: "None"
  selector:
    component: es
    role: kibana
  ports:
  - name: http
    port: 5601
    protocol: TCP
