elasticsearch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: es
  labels:
    component: es
    role: client
spec:
  type: NodePort
  selector:
    component: es
    role: client
  ports:
  - name: http
    port: 9200
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: es-discovery
  labels:
    component: es
    role: master
spec:
  clusterIP: "None"
  selector:
    component: es
    role: master
  ports:
  - name: transport
    port: 9300
    protocol: TCP
