elasticsearch/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: es-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
 rules:
  - host: es.demo.xyz.com
    http:
      paths:
      - path: /
        backend:
          serviceName: es
          servicePort: 9200
  - host: kibana.demo.xyz.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
